<resources>
    <string name="app_name">EvolveChain</string>
    <string name="welcome_to_evolvechain">Welcome to EvolveChain</string>
    <string name="sign_up">Sign up</string>
    <string name="already_have_a_kyc_id">Already have a KYC Id</string>
    <string name="applogo">AppLogo</string>
    <string name="india">India</string>
    <string name="other_countries">North America / Canada</string>
    <string name="proceed">Proceed</string>
    <string name="kyc_id">KYC Id</string>
    <string name="pin">Pin</string>
    <string name="forgot_generate_pin">Forgot / Generate Pin</string>
    <string name="sign_in">Sign in</string>
    <string name="get_otp">Get OTP</string>
    <string name="enter_pin">Enter Pin</string>
    <string name="re_enter_pin">Re-Enter Pin</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="save">Save</string>
    <string name="right_arrow">right_arrow</string>
    <string name="first_name">First Name</string>
    <string name="middle_name">Middle Name</string>
    <string name="last_name">Last Name</string>
    <string name="add_e_mail">Add E-Mail</string>
    <string name="add_contact_number">Add Contact Number</string>
    <string name="user_s_pic">User\'s Pic</string>
    <string name="e_mail">E-Mail</string>
    <string name="add">Add</string>
    <string name="verify">Verify</string>
    <string name="enter_mobile_number">Enter mobile number</string>
    <string name="india_code">9191</string>
    <string name="identity_number">Identity Number</string>
    <string name="expiry_date">Expiry Date</string>
    <string name="address_1">Address 1</string>
    <string name="address_2">Address 2</string>
    <string name="state">State</string>
    <string name="country">Country</string>
    <string name="area_code">Zip</string>
    <string name="identity_proof">identity proof</string>
    <string name="enter_taxation_id">Enter Taxation Id</string>
    <string name="account_number">Account Number</string>
    <string name="bank_name">Bank Name</string>
    <string name="ifsc_code">IFSC Code</string>
    <string name="contact_number">Contact number</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="birth_place">Place of Birth</string>
    <string name="birth_country">Birth Country</string>
    <string name="issue_country">Issue Country</string>
    <string name="type">Type</string>
    <string name="number">Number</string>
    <string name="address">Address</string>
    <string name="street">Street</string>
    <string name="city">City</string>
    <string name="change_pin">Generate Pin</string>
    <string name="basic_info">Basic Info</string>
    <string name="settings">Settings</string>
    <string name="image_note">*click the picture while holding the document (your face should also be visible)</string>
    <string name="enter_old_pin">Enter old pin</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="passport_number">Passport Number</string>
    <string name="selfie_instructions">Make a selfie while holding your identity document that you used to fill in the Verification form. \n\nBefore uploading an image on the Verification form, please make sure to follow photo requirements: \nYou are looking straight at the camera. \nYour background has a light, neutral colour. \nYour selfie is in colour. \nNo red eye! \nDO NOT wear sunglasses, a hat or a headband. \nVerification Code must be clearly visible.</string>
    <string name="edit_application">Edit Application</string>
    <string name="edit_phone_info">Please enter your contact number</string>
    <string name="resend">Resend</string>
    <string name="continues">Continue</string>
    <string name="gender">Gender</string>
    <string name="address_info">Address Info</string>
    <string name="country_selection_info">Please select your country</string>
    <string name="submit_warning">Complete your profile details before submitting.</string>
    <string name="saving_pin">Saving Pin...</string>
    <string name="pin_mismatched">Pin does\'t match</string>
</resources>
