<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="3"
    android:background="#FFF"
    tools:context=".new_uis.SplashActivity">

    <ImageView
        android:id="@+id/image"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:contentDescription="@string/applogo"
        android:paddingTop="50sp"
        android:paddingEnd="@dimen/_30sdp"
        android:paddingStart="@dimen/_30sdp"
        android:src="@drawable/app_logo"
        android:transitionName="splash_image" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/app_name"
        android:textSize="@dimen/_25sdp"
        android:textColor="#000"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="#000"
        android:textSize="@dimen/_10sdp"
        android:text="Get your KYC done"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="vertical"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:weightSum="3">

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorDarkGray"
                android:onClick="onSignUpClick"
                android:text="@string/sign_up"
                android:textAllCaps="false"
                android:textColor="@color/colorButtonText" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@color/colorDarkGray"
                android:onClick="onAlreadyHaveIdClick"
                android:text="@string/already_have_a_kyc_id"
                android:textAllCaps="false"
                android:textColor="@color/colorButtonText" />


            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@color/colorDarkGray"
                android:onClick="onEditClick"
                android:text="@string/edit_application"
                android:textAllCaps="false"
                android:textColor="@color/colorButtonText" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
