<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.newgen.evolvechain.activities.BasicDetailsActivity">

    <Button
        android:id="@+id/button_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/colorDarkGray"
        android:text="@string/save"
        android:textAllCaps="false"
        android:textColor="@color/colorButtonText" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button_save"
        android:layout_alignParentTop="true"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="180dp"
                android:layout_height="180dp"
                android:layout_gravity="center">

                <ImageView
                    android:id="@+id/image"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:background="@drawable/ractangular_background"
                    android:contentDescription="@string/user_s_pic"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:scaleType="fitXY"
                    android:src="@drawable/ic_person_black_24dp" />

                <Button
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="25dp"
                    android:background="@drawable/ic_add_pic"
                    android:onClick="onAddImageClick" />

            </RelativeLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/edit_text_first_name_wrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp">

                <EditText
                    android:id="@+id/edit_text_first_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/first_name"
                    android:inputType="text" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/edit_text_middle_name_wrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp">

                <EditText
                    android:id="@+id/edit_text_middle_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/middle_name"
                    android:inputType="text" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/edit_text_last_name_wrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp">

                <EditText
                    android:id="@+id/edit_text_last_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/last_name"
                    android:inputType="text" />
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/button_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#FFF"
                android:drawableEnd="@drawable/ic_chevron_right_black_24dp"
                android:gravity="start|center"
                android:onClick="onAddEmailClick"
                android:paddingStart="5dp"
                android:text="@string/add_e_mail"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/button_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#FFF"
                android:drawableEnd="@drawable/ic_chevron_right_black_24dp"
                android:gravity="start|center"
                android:onClick="onAddPhoneClick"
                android:paddingStart="5dp"
                android:text="@string/add_contact_number"
                android:textAllCaps="false" />

        </LinearLayout>
    </ScrollView>

</RelativeLayout>
